creating new campaign and handling the first sttistics

--- a/campaign/templates/app/campaign/dashboard.html
+++ b/campaign/templates/app/campaign/dashboard.html
@@ -74,8 +74,8 @@
             </div>
             <div class="flex items-center gap-3">
                 <button class="btn bg-white border border-base-300 h-10 min-h-10 rounded-lg px-4 text-sm hover:bg-gray-50" onclick="">
-                    <i class="fa-solid fa-share-nodes mr-2 text-gray-500"></i>
-                    Sending Status
+                    <i class="fa-solid fa-history mr-2 text-gray-500"></i>
+                    see current results
                 </button>
                 <div class="dropdown dropdown-end">
                     <button tabindex="0" role="button" class="btn bg-white border border-base-300 h-10 min-h-10 px-3 flex items-center gap-2 rounded-lg hover:bg-gray-50">
