--- a/campaign/templates/base-app.html
+++ b/campaign/templates/base-app.html
@@ -27,6 +27,8 @@
   <!-- Include Shared Modals for entire app -->
   {% include 'components/modals.html' %}
 
+  <!-- Include Chat Widget -->
+  {% include 'components/chat-bubble.html' %}
 
 
 <script>
